# random-standup-py

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  release.yml
src/random_standup/: standup.py
tests/: test_random_standup.py
