[tool.poetry]
name = "random-standup"
version = "0.1.0"
description = "Standup Randomizer"
authors = ["jidicula <johanan@forcepush.tech>"]
license = "BSD 3-Clause License"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''

[tool.poetry.scripts]
standup = "random_standup.standup:standup"

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "^0.7.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
