[tool.poetry]
name = "random-standup"
version = "0.2.0"
description = "Standup Randomizer"
authors = ["jidicula <johanan@forcepush.tech>"]
license = "BSD 3-Clause License"
readme = "README.md"
homepage = "https://github.com/jidicula/random-standup-py"
repository = "https://github.com/jidicula/random-standup-py"
documentation = "https://github.com/jidicula/random-standup-py"
keywords = ["agile", "standup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Office/Business"
]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''

[tool.poetry.scripts]
standup = "random_standup.standup:standup"

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = "^0.7.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
